apps/cli/tests/snapshots/browserpass_golden__configure_inaccessible.snap
---
source: apps/cli/tests/browserpass_golden.rs
expression: response
---
{
  "code": 13,
  "params": {
    "action": "configure",
    "message": "The password store is not accessible",
    "storeId": "gone",
    "storeName": "Gone",
    "storePath": "/nonexistent/store"
  },
  "status": "error",
  "version": 3001002
}
