apps/cli/tests/snapshots/browserpass_golden__fetch.snap
---
source: apps/cli/tests/browserpass_golden.rs
expression: "run.responses[0]"
---
{
  "data": {
    "contents": "hunter2\nlogin: alice\nurl: https://example.com/login\notpauth://totp/Example:alice?secret=GEZDGNBVGY3TQOJQGEZDGNBVGY3TQOJQ&issuer=Example\n"
  },
  "status": "ok",
  "version": 3001002
}
