apps/cli/tests/snapshots/browserpass_golden__fetch_bad_extension.snap
---
source: apps/cli/tests/browserpass_golden.rs
expression: "run.responses[0]"
---
{
  "code": 23,
  "params": {
    "action": "fetch",
    "file": "Web/example.com",
    "message": "The requested password file does not have the expected '.gpg' extension"
  },
  "status": "error",
  "version": 3001002
}
