apps/cli/tests/snapshots/browserpass_golden__list.snap
---
source: apps/cli/tests/browserpass_golden.rs
expression: response
---
{
  "data": {
    "files": {
      "default": [
        "Dev/github.gpg",
        "Web/example.com.gpg"
      ]
    }
  },
  "status": "ok",
  "version": 3001002
}
