apps/cli/tests/snapshots/browserpass_golden__unknown_action.snap
---
source: apps/cli/tests/browserpass_golden.rs
expression: "run.responses[0]"
---
{
  "code": 12,
  "params": {
    "action": "delete",
    "message": "Invalid request action"
  },
  "status": "error",
  "version": 3001002
}
